// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Inventory: Current wooden inventory in the warehouse.
Wood: Stores information about the types of wood.
Store: Information on stores for wooden goods.
StoreInventory: Wooden inventory held by each store.
Supplier: Information on wood suppliers.
SupplierWood: Link table between Supplier and Wood; details which Supplier provides which Wood.
'''
}

Table Inventory {
    id INTEGER [primary key]
    wood_id INTEGER 
    quantity INTEGER 
    arrived_on DATETIME 
    expected_date DATETIME 
    cost INTEGER 
    total_value INTEGER 
    }

Table Wood {
    id INTEGER [primary key]
    name VARCHAR 
    Type VARCHAR 
    origin VARCHAR 
    cost INTEGER 
    }

Table Store {
    id INTEGER [primary key]
    name VARCHAR 
    location VARCHAR 
    manager_name VARCHAR 
    }

Table StoreInventory {
    id INTEGER [primary key]
    store_id INTEGER 
    wood_id INTEGER 
    quantity INTEGER 
    total_value INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    country VARCHAR 
    contact_number VARCHAR 
    }

Table SupplierWood {
    id INTEGER [primary key]
    supplier_id INTEGER 
    wood_id INTEGER 
    }



// Relationships
    Ref: Inventory.(wood_id) < Wood.(id)
    Ref: StoreInventory.(store_id) < Store.(id)
    Ref: StoreInventory.(wood_id) < Wood.(id)
    Ref: SupplierWood.(supplier_id) < Supplier.(id)
    Ref: SupplierWood.(wood_id) < Wood.(id)
